--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 
 <html>
   <title>
-    First website
+    My Website
   </title>
     <body>
-    <h1>This is my first github page</h1>
-  </body>
+      </body>
 </html>
